Fixed spacing for course level

--- a/css/custom.css
+++ b/css/custom.css
@@ -38,11 +38,30 @@ font-size: large;
 	border:1px solid #777777;
 }
 
+#randomred{
+	background-color: #C01C1C;
+}
 
+#randompink{
+	background-color: #BD0FE1;
+}
+
+div.centre
+{
+  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 .randomblue {
-	background-color: #cc0000#
+	color: #cc0000#
+}
+
+.center-inner {
+    display: table;
+    margin: 0 auto; 
 }
 
 .top5 { margin-top:5px; }
@@ -58,3 +77,21 @@ font-size: large;
 .bottom15 { margin-bottom:15px; }
 .bottom17 { margin-bottom:17px; }
 .bottom30 { margin-bottom:30px; }
+
+.left5 { margin-left:5px; }
+.left7 { margin-left:7px; }
+.left10 { margin-left:10px; }
+.left15 { margin-left:15px; }
+.left17 { margin-left:17px; }
+.left30 { margin-left:30px; }
+
+.right5 { margin-right:5px; }
+.right7 { margin-right:7px; }
+.right10 { margin-right:10px; }
+.right15 { margin-right:15px; }
+.right17 { margin-right:17px; }
+.right30 { margin-right:30px; }
+
+
+
+
